--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,26 +13,22 @@ provisioner:
 
 platforms:
   - name: ansible-ubuntu-1604
-    image: ubuntu
-    image_version: '16.04'
+    image: ubuntu:16.04
     groups:
       - no_libvirt_service
   - name: ansible-ubuntu-1804
-    image: ubuntu
-    image_version: '18.04'
+    image: ubuntu:18.04
     groups:
       - no_libvirt_service
   - name: ansible-ubuntu-1810
-    image: ubuntu
-    image_version: '18.10'
+    image: ubuntu:18.10
     groups:
       - no_libvirt_service
   - name: ansible-debian
-    image: debian
+    image: debian:latest
     image_version: 'latest'
   - name: ansible-arch
-    image: archimg/base
-    image_version: full
+    image: archimg/base:full
     command: /lib/systemd/systemd
     privileged: true
     groups:
