--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,28 +12,26 @@ provisioner:
         libvirt_services: []
 
 platforms:
-  - name: ansible-ubuntu-1604
+  - name: ansible-ubuntu-16-04-lts
     image: ubuntu:16.04
     groups:
       - no_libvirt_service
-  - name: ansible-ubuntu-1804
+  - name: ansible-ubuntu-lts
     image: ubuntu:18.04
-  - name: ansible-ubuntu-1810
+  - name: ansible-ubuntu-18-10
     image: ubuntu:18.10
     groups:
       - no_libvirt_service
   - name: ansible-debian
     image: debian:latest
-    image_version: 'latest'
   - name: ansible-arch
-    image: archimg/base:full
-    command: /lib/systemd/systemd
+    image: archlinux/base:latest
+    command: /usr/lib/systemd/systemd
     privileged: true
     groups:
       - no_libvirt_service
   - name: ansible-centos
-    image: centos
-    image_version: latest
+    image: centos:latest
     command: /usr/lib/systemd/systemd
     privileged: true
 
