--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 ---
 language: python
-python: "2.7"
 
 # Spin off separate builds for each of the following versions of Ansible
 env:
-  - ANSIBLE_VERSION=2.4
   - ANSIBLE_VERSION=2.5
   - ANSIBLE_VERSION=2.6
   - ANSIBLE_VERSION=2.7
+  - ANSIBLE_VERSION=2.8
+  - ANSIBLE_VERSION=2.9
+  - ANSIBLE_VERSION=2.10
 
 # Require the standard build environment
 sudo: required
@@ -24,11 +25,7 @@ install:
   # Install Ansible
   - pip install "ansible~=$ANSIBLE_VERSION"
 
-  # Install Python API for Docker (required by Molecule Docker driver)
-  - pip install docker
-
-  # Install Molecule
-  - pip install molecule[docker]
+  - pip install docker molecule[docker]
 
   # Check Ansible version
   - ansible --version
@@ -37,11 +34,11 @@ install:
   - molecule --version
 
   # Build the Docker images
-  - molecule create
-  - molecule destroy
+  - molecule --debug create
+  - molecule --debug destroy
 
 script:
-  - molecule test
+  - molecule --debug test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
